[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels", branch = "main"}
winit = "0.28"
rand = "0.8.5"
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
